Add build.spec file for RPM packaging
This also defines a new cmake parameter PDF2HTMLEX_PREFIX
that defines the final install prefix which is used in pdf2htmlEX-config.h

--- a/src/pdf2htmlEX-config.h.in
+++ b/src/pdf2htmlEX-config.h.in
@@ -16,8 +16,8 @@
 namespace pdf2htmlEX {
 
 static const std::string PDF2HTMLEX_VERSION = "@PDF2HTMLEX_VERSION@";
-static const std::string PDF2HTMLEX_PREFIX = "@CMAKE_INSTALL_PREFIX@";
-static const std::string PDF2HTMLEX_DATA_PATH = "@CMAKE_INSTALL_PREFIX@""/share/pdf2htmlEX";
+static const std::string PDF2HTMLEX_PREFIX = "@PDF2HTMLEX_PREFIX@";
+static const std::string PDF2HTMLEX_DATA_PATH = "@PDF2HTMLEX_PREFIX@""/share/pdf2htmlEX";
 
 } // namespace pdf2htmlEX
 
