Add patch to CI so we can use include files outside the system include directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -121,7 +121,7 @@ before_install:
 before_script:
   - export LD_LIBRARY_PATH=${TRAVIS_BUILD_DIR}/usr/lib:$LD_LIBRARY_PATH
   - export PKG_CONFIG_PATH=${TRAVIS_BUILD_DIR}/usr/lib/pkgconfig:$PKG_CONFIG_PATH
-  - cat ${TRAVIS_BUILD_DIR}/usr/lib/pkgconfig/poppler.pc
+  - patch < CMakeLists.txt.patch
   - mkdir build && cd build && cmake -DENABLE_SVG=ON -DCMAKE_INSTALL_PREFIX=${TRAVIS_BUILD_DIR}/usr ..
 
 script:
