Turn on tests since pdf2htmlEX build is now working. local_browser tests have to be disabled until geckobrowser can be reliably installed on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -110,7 +110,7 @@ before_install:
   - cd ${TRAVIS_BUILD_DIR}
 
 # Test setup
-  - pip install --user selenium sauceclient
+  - pip install --user Pillow selenium sauceclient
   - export DISPLAY=:99.0
   - test/start_xvfb.sh
   - pushd /
