--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,34 @@ services:
 
 compiler: gcc
 
-#addons:
+env:
+  - UNATTENDED=--assume-yes
+
+addons:
+  apt:
+    # build tools
+    - git
+    - pkg-config
+    - ruby
+    - autoconf
+    - libtool
+    - cmake
+    - make
+    - gcc
+    - g++
+    - gettext
+    - openjdk-8-jre-headless
+    - tree
+    # dev libraries
+    - libcairo-dev
+    - libspiro-dev
+    - libpng-dev
+    - libjpeg-dev
+    - poppler-data
+    - libpango1.0-dev
+    - liblcms2-dev
+    - libxml2-dev
+    - libuninameslist-dev
 #  homebrew:
 #    packages:
 #      - autoconf
@@ -46,5 +73,14 @@ matrix:
 
 script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - ./buildScripts/doItAll
+  - ./buildScripts/getPoppler
+  - ./buildScripts/buildPoppler
+  - ./buildScripts/installPoppler
+  - ./buildScripts/getFontforge
+  - ./buildScripts/buildFontforge
+  - ./buildScripts/installFontforge
+  - ./buildScripts/buildPdf2htmlEX
+  - ./buildScripts/installPdf2htmlEX
+  - ./buildScripts/createAppImage
+  - ./buildScripts/createDockerImage 
   - docker push $DOCKER_USERNAME/pdf2htmlex
