--- a/.travis.yml
+++ b/.travis.yml
@@ -86,9 +86,6 @@ script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - ./buildScripts/getBuildTools     || travis_terminate 1;
   - ./buildScripts/getDevLibraries   || travis_terminate 1;
-  - ./buildScripts/getPoppler        || travis_terminate 1;
-  - ./buildScripts/buildPoppler      || travis_terminate 1;
-  - ./buildScripts/installPoppler    || travis_terminate 1;
   - ./buildScripts/getFontforge      || travis_terminate 1;
   - ./buildScripts/buildFontforge    || travis_terminate 1;
   - ./buildScripts/installFontforge  || travis_terminate 1;
@@ -97,3 +94,7 @@ script:
   - ./buildScripts/createAppImage    || travis_terminate 1;
   - ./buildScripts/createDockerImage || travis_terminate 1;
   - docker push $DOCKER_USERNAME/pdf2htmlex
+
+#  - ./buildScripts/getPoppler        || travis_terminate 1;
+#  - ./buildScripts/buildPoppler      || travis_terminate 1;
+#  - ./buildScripts/installPoppler    || travis_terminate 1;
