--- a/.travis.yml
+++ b/.travis.yml
@@ -93,6 +93,9 @@ script:
   - cd
   - pwd
   - ls -la
+  - cd build
+  - pwd
+  - ls -la
 #  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 #  - ./buildScripts/getBuildTools     || travis_terminate 1;
 #  - ./buildScripts/getDevLibraries   || travis_terminate 1;
