--- a/.travis.yml
+++ b/.travis.yml
@@ -96,6 +96,9 @@ script:
   - cd build
   - pwd
   - ls -la
+  - cd [secure]
+  - pwd
+  - ls -la
 #  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 #  - ./buildScripts/getBuildTools     || travis_terminate 1;
 #  - ./buildScripts/getDevLibraries   || travis_terminate 1;
