travis full test

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,15 @@ services:
 
 compiler: gcc
 
+branches:
+  except:  # do not build tags that we create using the upload.sh script
+    - /^(?i:continuous.*)$/
+
 env:
   global:
     - UNATTENDED="--assume-yes"
     - FORCE_REINSTALL="--reinstall"
-    - UPLOADTOOL_SUFFIX="test-$TRAVIS_BRANCH-$(date +%Y_%m_%d-%H_%M_%S)"
+#    - UPLOADTOOL_SUFFIX="test-$TRAVIS_BRANCH-$(date +%Y_%m_%d-%H_%M_%S)"
 
 #addons:
 #  apt:
@@ -84,41 +88,20 @@ matrix:
 #    - os: osx # Until the build passes, then re-enable.
 
 script:
-  - echo $TRAVIS_TAG
-  - echo $TRAVIS_BRANCH
-  - echo $TRAVIS_BUILD_DIR
-  - echo $HOME
-  - echo $TRAVIS_COMMIT
-  - echo $TRAVIS_REPO_SLUG
-  - echo $GITHUB_TOKEN
-  - echo $UPLOADTOOL_SUFFIX
-  - wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
-  - pwd
-  - ls -la
-  - cd
-  - pwd
-  - ls -la
-  - cd build
-  - pwd
-  - ls -la
-  - cd $TRAVIS_BUILD_DIR
-  - pwd
-  - ls -la
-  - cat upload.sh
-#  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-#  - ./buildScripts/getBuildTools     || travis_terminate 1;
-#  - ./buildScripts/getDevLibraries   || travis_terminate 1;
-#  - ./buildScripts/getPoppler        || travis_terminate 1;
-#  - ./buildScripts/buildPoppler      || travis_terminate 1;
-#  - ./buildScripts/installPoppler    || travis_terminate 1;
-#  - ./buildScripts/getFontforge      || travis_terminate 1;
-#  - ./buildScripts/buildFontforge    || travis_terminate 1;
-#  - ./buildScripts/installFontforge  || travis_terminate 1;
-#  - ./buildScripts/buildPdf2htmlEX   || travis_terminate 1;
-#  - ./buildScripts/installPdf2htmlEX || travis_terminate 1;
-#  - ./buildScripts/createAppImage    || travis_terminate 1;
-#  - ./buildScripts/createDockerImage || travis_terminate 1;
-#  - docker push $DOCKER_USERNAME/pdf2htmlex
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - ./buildScripts/getBuildTools     || travis_terminate 1;
+  - ./buildScripts/getDevLibraries   || travis_terminate 1;
+  - ./buildScripts/getPoppler        || travis_terminate 1;
+  - ./buildScripts/buildPoppler      || travis_terminate 1;
+  - ./buildScripts/installPoppler    || travis_terminate 1;
+  - ./buildScripts/getFontforge      || travis_terminate 1;
+  - ./buildScripts/buildFontforge    || travis_terminate 1;
+  - ./buildScripts/installFontforge  || travis_terminate 1;
+  - ./buildScripts/buildPdf2htmlEX   || travis_terminate 1;
+  - ./buildScripts/installPdf2htmlEX || travis_terminate 1;
+  - ./buildScripts/createAppImage    || travis_terminate 1;
+  - ./buildScripts/createDockerImage || travis_terminate 1;
+  - docker push $DOCKER_USERNAME/pdf2htmlex
 
 #deploy:
 #  provider: releases
