--- a/.travis.yml
+++ b/.travis.yml
@@ -8,20 +8,12 @@ sudo: true
 # and https://docs.travis-ci.com/user/reference/windows/
 # why fuse is not possible on windows: https://superuser.com/questions/179436/is-it-possible-to-use-fuse-with-windows  
 
-services:
-  - docker
-
 compiler: gcc
 
 branches:
   except:  # do not build tags that we create using the upload.sh script
     - /^(?i:continuous.*)$/
 
-env:
-  global:
-    - DOCKER_FROM="ubuntu:18.04"
-
-#addons:
 #  apt:
 #  update: true
 #  packages:
@@ -49,7 +41,6 @@ env:
 #    - libxml2-dev
 #    - libuninameslist-dev
 #  homebrew:
-#    taps: pdf2htmlEX/homebrew-brewTap
 #    packages:
 #       - pdf2html-new
 #      - autoconf
@@ -85,13 +76,20 @@ jobs:
 #    - stage: build-linux
 #      os:
 #        - linux
+#      env:
+#        global:
+#          - DOCKER_FROM="ubuntu:18.04"
+#      services:
+#        - docker
 #      dist: bionic
 #      script: ./buildScripts/doItAllTravis
     - stage: build-osx
       os:
         - osx
+      addons:
+        homebrew:
+          taps: pdf2htmlEX/homebrew-brewTap
       script:
-        - brew tap pdf2htmlEX/homebrew-brewTaps
         - brew install pdf2htmlex-new
 #    - stage: test
 #      os: 
