--- a/.travis.yml
+++ b/.travis.yml
@@ -88,6 +88,7 @@ jobs:
         - osx
       addons:
         homebrew:
+          update: true
           taps: pdf2htmlEX/homebrew-brewTap
           packages:
             - pdf2htmlex-new
