Set min poppler version to 0.70.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ add_custom_target(dist
 find_package(PkgConfig)
 
 # Compilation errors with poppler versions newer than 0.81.0
-pkg_check_modules(POPPLER REQUIRED poppler>=0.25.0 poppler<0.82.0)
+# Compiling against pre 0.70.0 not possible either
+pkg_check_modules(POPPLER REQUIRED poppler>=0.70.0 poppler<0.82.0)
 include_directories(${POPPLER_INCLUDE_DIRS})
 link_directories(${POPPLER_LIBRARY_DIRS})
 set(PDF2HTMLEX_LIBS ${PDF2HTMLEX_LIBS} ${POPPLER_LIBRARIES})
