removed poppler Cairo source copies inside pdf2htmlEX source tree

--- a/pdf2htmlEX/CMakeLists.txt
+++ b/pdf2htmlEX/CMakeLists.txt
@@ -23,41 +23,32 @@ find_package(PkgConfig)
 # SINCE we have a very intimate relationship with a particular version of 
 # poppler... we explicitly describe the poppler include and library 
 # paths.
-
+#
 include_directories(
   ../poppler/build/poppler
   ../poppler/build
   ../poppler/poppler
   ../poppler
 )
-
-#link_directories(
-#  ../poppler/build
-#)
+#
+# The following order is critical as the glib functions use functions 
+# located in the main poppler library 
+#
 set(POPPLER_LIBRARIES ${POPPLER_LIBRARIES}
-  ${CMAKE_SOURCE_DIR}/../poppler/build/libpoppler.a
   ${CMAKE_SOURCE_DIR}/../poppler/build/glib/libpoppler-glib.a
+  ${CMAKE_SOURCE_DIR}/../poppler/build/libpoppler.a
 )
 
 if(ENABLE_SVG)
     pkg_check_modules(CAIRO REQUIRED cairo>=1.10.0)
-    message("Trying to locate cairo-svg...")
+    message("-- Trying to locate cairo-svg...")
     find_path(CAIRO_SVG_INCLUDE_PATH cairo-svg.h PATHS ${CAIRO_INCLUDE_DIRS} NO_DEFAULT_PATH)
     if(CAIRO_SVG_INCLUDE_PATH)
+        message("--    found cairo-svg...")
         include_directories(${CAIRO_INCLUDE_DIRS})
         link_directories(${CAIRO_LIBRARY_DIRS})
         set(PDF2HTMLEX_LIBS ${PDF2HTMLEX_LIBS} ${CAIRO_LIBRARIES})
         set(ENABLE_SVG 1)
-        set(CAIROOUTPUTDEV_PATH 3rdparty/poppler/git)
-        include_directories(${CAIROOUTPUTDEV_PATH})
-        set(PDF2HTMLEX_SRC ${PDF2HTMLEX_SRC}
-            ${CAIROOUTPUTDEV_PATH}/CairoFontEngine.h
-            ${CAIROOUTPUTDEV_PATH}/CairoFontEngine.cc
-            ${CAIROOUTPUTDEV_PATH}/CairoRescaleBox.h
-            ${CAIROOUTPUTDEV_PATH}/CairoRescaleBox.cc
-            ${CAIROOUTPUTDEV_PATH}/CairoOutputDev.h
-            ${CAIROOUTPUTDEV_PATH}/CairoOutputDev.cc
-        )
     else()
         message(FATAL_ERROR "Error: no SVG support found in Cairo")
     endif()
@@ -71,14 +62,14 @@ endif()
 # SINCE we have a very intimate relationship with a particular version of 
 # fontforge... we explicitly describe the fontforge include and library 
 # paths.
-
+#
 include_directories(
   ../fontforge/fontforge
   ../fontforge
   ../fontforge/build/inc
   ../fontforge/inc
 )
-
+#
 include_directories(${FONTFORGE_INCLUDE_DIRS})
 link_directories(${FONTFORGE_LIBRARY_DIRS})
 set(FONTFORGE_LIBRARIES ${FONTFORGE_LIBRARIES}
